# Numeric

./: .gitignore  CMakeLists.txt  Geometry.cpp  Makefile  Numeric  Numeric.cpp  Point.cpp  README.md  Sumator.cpp  SummatorImpl.cpp  Triangle.cpp  main.cpp
.ccls-cache/@@home@kamil@Projects@Studia@Numeric/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls-narrow.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@pthread_stack_min-dynamic.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@setjmp.h.blob  (+238 more)
gcm.cache/: geometry-point.gcm  geometry-triangle.gcm  geometry.gcm  numeric.gcm  sumator.gcm
numeric/: ArithmFacade.cpp  ArithmFacade.h  ArithmInjector.cpp  ArithmInjector.h  BasicIo.cpp  BasicIo.h  Buffer.h  BufferInstance.cpp  BufferInstance.h  CMakeLists.txt  Numeric.cpp  Numeric.h  Utils.cpp  Utils.h  arithm.cpp  arithm.h  basicio.cpp  basicio.h  basicmul.h  buffer.h  numeric.cpp  numeric.h  utils.cpp  utils.h
tester/: CMakeLists.txt  TestBrowser.cpp  TestBrowser.h  logger.cpp  logger.h  normalizedtest.h  testcase.h  tester.cpp  tester.h  testerImpl.cpp  testparser.cpp  testparser.h  timer.h
testfiles/: addition  addition.tst  equality  equality.tst  gcd.tst  millerrabin.tst  modexp  modexp.tst  mul  mul.tst  newton  rsa.tst  shift  shift.tst
tests/: addition  arithm_tests.cpp  arithm_tests.h  mock_prime_generator.cpp  mock_prime_generator.h
(+74 files in other folders)
